# babyfeep

./: .editorconfig  .gitignore  README.md  build-all.sh  download-all.sh  package.json  setup.sh
app/: Cargo.toml  lookup.rs  main.rs  serve.sh  shell.nix
datasource/devdocs/: README.md  build.sh  build_htpack.ts  download.sh  package.json  shell.nix  wantdocs.txt
datasource/devdocs/data/: derive  download
datasource/web/: README.md  build.sh  build_htpack.ts  checkrobots.ts  download.sh  package.json  shell.nix  wantorigins.txt
datasource/web/data/: derive  download
nix/: README.md  shell.nix  sources.json  yarn.shell.nix
tantivy/: build.sh  data  dump_htpack.ts  shell.nix
tantivy/index_template/: meta.json
util/: iterutil.ts
util/domtf/: index.js  package.json
util/htpack/: README.md  byte-reader.ts  domserializer.ts  dump_htpack.ts  expandable-buffer.ts  fattr.js  file-reader.ts  file-writer.ts  htmldata.ts  hydrator.ts  package.json  parse5-serializer.ts  structs.gen.ts  structs.ts  tsconfig.json
util/warc/: wget-warc  wget-warc-ifnew
