[package]
name = "feep-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
maud = "0.26.0"
tantivy = "0.24.1"
tiny_http = "0.12"
url = "2.5.4"

[[bin]]
name = "babyfeep-server"
path = "main.rs"
